<resources>
    <string name="app_name">Gamino</string>
    <string name="action_settings">Settings</string>

    <!-- Strings de pantalla Sign_in -->
    <string name="SignEmail">Correo Electrónico</string>
    <string name="SignUsuario">Usuario</string>
    <string name="SignContraseña">Contraseña</string>
    <string name="SignConfirmarContraseña">Confirmar contraseña</string>
    <string name="SignRegistrar">Crear usuario</string>
    <string name="SignTitulo">Crear Usuario</string>


    <!-- Strings de pantalla Log_in -->
    <string name="LogUsuario">Usuario</string>
    <string name="LogContraseña">Contraseña</string>
    <string name="LogIngresar">Login</string>
    <string name="LogRegistrar">Sign-in</string>

    <!-- Strings de pantalla ConfigurarPerfil -->
    <string name="ConfIntereses">Agregar intereses</string>
    <string name="ConfCapturar">Capturar foto</string>
    <string name="ConfCargar">Cargar foto</string>
    <string name="ConfAvanzar">Avanzar</string>
    <string name="ConfUsuario">Usuario</string>

    <!-- Strings de pantalla VerPublicacion (ver) -->
    <string name="PubTitulo">Como ser tanke!</string>
    <string name="PubSubtitulo">Guía de aprendizaje de Reinhard</string>
    <string name="PubCuerpo">Reinhard es un heroe de rol tanke, posee un gran escudo con el que puede bloquear ataques enemigos y proteger su equipo</string>
    <string name="PubComentar">Comentar</string>
    <string name="PubVolver">Volver</string>

    <!-- Strings de pantalla TablaComentarios-->
    <string name="ComTitulo">Comentar</string>
    <string name="ComPublicar">Publicar</string>
    <string name="ComVolver">Volver</string>

    <!-- Strings de pantalla AltaPublicación-->
    <string name="AltaPubTitulo">Titulo</string>
    <string name="AltaPubSubtitulo">Subtitulo</string>
    <string name="AltaPubCuerpo">Cuerpo</string>
    <string name="AltaPubIntereses">Intereses</string>
    <string name="AltaPubAlta">Publicar</string>
    <string name="AltaPubVolver">Volver</string>


    <!-- Strings de pantalla Intereses-->
    <string name="ListaIntereses">Lista de Intereses</string>
    <string name="InteresesConfirmar">Confirmar</string>
    <string name="InteresesOmitir">Omitir</string>

    <!-- Strings Contenedor De Intereses-->
    <string name="ContenedorNombreIntereses"> Nombre Interes</string>
    <string name="ContenedorDescripcionIntereses"> Descripcion Interes</string>
    <!-- Strings MainActivity-->

    <string name="MainActivitySigIn"> Agregar Usuario</string>
    <string name="MainActivityLogIn"> Acceder a Cuenta </string>
    <string name="title_activity_cargar_intereses">CargarIntereses</string>
    <!-- Strings MyFirebaseMessagingService-->
    <string name="default_notification_channel_id">default_channel</string>
    <!-- Strings MyFirebaseMessagingService-->
    <string name="ListaPubCerrar">Cerrar</string>
    <string name="ListaPubAbrir">Abrir</string>


</resources>
