<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AltaPublicacion"
    android:background="@drawable/gradient"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:id="@+id/altaPubTVTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AltaPubTitulo" />

    <EditText
        android:id="@+id/alta_publicacion_edt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/altaPubTVSubtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AltaPubSubtitulo"
        />

    <EditText
        android:id="@+id/alta_publicacion_edt_subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/altaPubTVCuerpo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AltaPubCuerpo" />

    <EditText
        android:id="@+id/alta_publicacion_edt_cuerpo"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/altaPubTVInteres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AltaPubIntereses" />

    <Spinner
        android:id="@+id/alta_publicacion_sp_intereses"
        android:layout_width="match_parent"
        android:layout_height="41dp" />

    <Button
        android:id="@+id/alta_publicacion_btn_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/AltaPubAlta"
        android:background="@drawable/button_rounded"/>

    <Button
        android:id="@+id/alta_publicacion_btn_volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="10dp"
        android:text="@string/AltaPubVolver" />
</LinearLayout>