<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Log_in">

    <TextView
        android:id="@+id/loginTVUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogUsuario" />

    <EditText
        android:id="@+id/loginETUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/loginTVContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogContraseña" />

    <EditText
        android:id="@+id/loginETContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBTNIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogIngresar" />

    <Button
        android:id="@+id/loginBTNRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogRegistrar" />
</LinearLayout>