<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigurarPerfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/configuracionTVUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ConfUsuario" />
    </LinearLayout>

    <Button
        android:id="@+id/configurarBTNIntereses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConfIntereses" />

    <Button
        android:id="@+id/configurarBTNCapturar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConfCapturar" />

    <Button
        android:id="@+id/configurarBTNCargar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConfCargar" />

    <Button
        android:id="@+id/configurarBTNOmitir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConfOmitir" />
</LinearLayout>