<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TablaComentarios"
    android:background="@drawable/gradient"

    android:paddingLeft="30dp"
    android:paddingRight="30dp">>

    <!--ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"-->
    <ListView
        android:id="@+id/tabla_comentarios_lV_comentarios"
        android:layout_width="match_parent"
        android:layout_height="262dp" />

    <TextView
        android:id="@+id/tabla_comentarios_tV_comentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ComTitulo" />

    <EditText
        android:id="@+id/tabla_comentarios_edt_comentar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/tabla_comentarios_btn_comentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_rounded"
        android:text="@string/ComPublicar" />/>

    <Button
        android:id="@+id/tabla_comentarios_btn_volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/ComVolver" />
    <!--/ScrollView-->
</LinearLayout>